# loom

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTEXT_ENGINEERING_FIXES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  ProductBrief.md  README.md  ROADMAP.md  loom.toml  mcp-config.toml.example  voice_agent.toml
bridge/: Cargo.toml  README.md
bridge/src/: action_broker.rs  lib.rs  memory_handler.rs  trading_memory.rs
bridge/tests/: forward_action_test.rs  heartbeat_test.rs  integration_test.rs  memory_service_test.rs  register_agent_test.rs
bridge/tests/integration/: e2e_basic.rs  e2e_forward_action.rs  e2e_server_push.rs  mod.rs
bridge/tests/unit/: forward_action_test.rs  heartbeat_test.rs
core/: Cargo.toml  build.rs
core/benches/: README.md  event_bus_benchmark.rs
core/examples/: dashboard_demo.rs  mcp_integration.rs  mic_capture.rs  mic_vad.rs  mic_vad_stt.rs  setup_stt_demo.sh  test_brave_search.rs  wake_from_transcript.rs
core/src/: action_broker.rs  agent.rs  collab.rs  directory.rs  envelope.rs  event.rs  lib.rs  llm.rs  local_model.rs  plugin.rs  router.rs  storage.rs  telemetry.rs
core/src/agent/: README.md  behavior.rs  directory.rs  instance.rs  mod.rs  runtime.rs
core/src/agent/cognitive/: README.md  agent_adapter.rs  config.rs  loop_trait.rs  mod.rs  simple_loop.rs  thought.rs  working_memory.rs
core/src/audio/: README.md  STT_GUIDE.md  STT_IMPLEMENTATION.md  mic.rs  mod.rs  stt.rs  tts.rs  vad.rs  wake.rs
core/src/cognitive/: README.md  agent_adapter.rs  loop_trait.rs  memory_buffer.rs  mod.rs  simple_loop.rs
core/src/cognitive/llm/: README.md  client.rs  mod.rs  provider.rs  tool_orchestrator.rs
core/src/context/: README.md  agent_context.rs  agent_memory.rs  builder.rs  memory.rs  mod.rs  types.rs
core/src/context/memory/: mod.rs  persistent.rs  store.rs
core/src/context/pipeline/: mod.rs  orchestrator.rs
core/src/context/ranking/: mod.rs  ranker.rs
core/src/context/retrieval/: mod.rs  strategy.rs
core/src/context/window/: manager.rs  mod.rs  token_counter.rs
core/src/dashboard/: README.md  api.rs  event_stream.rs  flow_tracker.rs  mod.rs  static_assets.rs  topology.rs
core/src/dashboard/frontend/: index.html  tailwind.config.ts  vite.config.ts
core/src/dashboard/static/: app.js  index.html  styles.css
core/src/llm/: README.md  adapter.rs  mod.rs  provider.rs  tool_orchestrator.rs
core/src/mcp/: README.md  adapter.rs  client.rs  manager.rs  mod.rs  types.rs
core/src/messaging/: collab.rs  envelope.rs  event_bus.rs  event_ext.rs  mod.rs
core/src/providers/: README.md  mod.rs  weather.rs  web_search.rs
core/src/tools/: README.md  error.rs  mod.rs  registry.rs  traits.rs
core/src/tools/mcp/: adapter.rs  manager.rs  mod.rs  types.rs
core/src/tools/native/: filesystem.rs  mod.rs  shell.rs  weather.rs  web_search.rs
core/src/tts/: mod.rs  provider.rs
core/tests/: README.md  action_broker_test.rs.disabled  agent_action.rs  agent_runtime_test.rs  audio_chunking.rs  backpressure_qos.rs  cognitive_test.rs  collab_test.rs  dashboard_basic_test.rs  dashboard_unit_test.rs  directory_test.rs  envelope_test.rs  event_bus.rs  event_helpers_test.rs  event_pressure_test.rs  event_test.rs  filesystem_tool_test.rs  integration_test.rs  llm.rs  llm_adapter.rs  llm_client.rs  llm_test.rs  mcp_test.rs  memory_test.rs  providers_test.rs  providers_test.rs.disabled  router.rs  router_test.rs  shared_bus.rs  stt.rs  tool_orchestrator_test.rs  vad.rs  wake.rs
core/tests/integration/: e2e_action_broker.rs  e2e_agent_reply.rs  e2e_basic.rs  e2e_directory.rs  e2e_envelope.rs  e2e_error_handling.rs  e2e_routing.rs  e2e_tool_use.rs  mod.rs
core/tests/integration.disabled/: e2e_collab.rs  e2e_dashboard.rs  e2e_dynamic_subscription.rs  e2e_multi_agent.rs
core/tests/pressure/: README.md  backpressure.rs  filtering.rs  latency.rs  mod.rs  qos_behavior.rs  stats.rs  throughput.rs
demo/voice_agent/: Cargo.toml  README.md  TOOL_USE_GUIDE.md
demo/voice_agent/examples/: tool_use_example.rs
demo/voice_agent/scripts/: setup_models.sh
demo/voice_agent/src/: config.rs  main.rs  voice_agent.toml
docs/: BRIDGE.md  (+17 more)
loom-audio/: Cargo.toml  README.md  debug_stt.sh
loom-audio/src/: lib.rs  mic.rs  stt.rs  tts.rs  utils.rs  vad.rs  wake.rs
loom-audio/tests/: audio_chunking.rs  stt.rs  vad.rs  wake.rs
loom-proto/: Cargo.toml  README.md  build.rs
loom-proto/proto/: action.proto  agent.proto  bridge.proto  event.proto  memory.proto  plugin.proto
loom-proto/src/: lib.rs
loom-py/: .gitignore  LICENSE  README.md  pyproject.toml
loom-py/docs/: BENCHMARKING.md  CLI_GUIDE.md  COGNITIVE_GUIDE.md  CONTEXT_INTEGRATION.md  DESIGN.md  FUTURE.md  INDEX.md  LLM_GUIDE.md  RUNTIME.md  SDK_GUIDE.md
loom-py/docs/context/: COMPACTION.md  CONTEXT_INTEGRATION.md  DESIGN.md  ISOLATION.md  LIFECYCLE.md  OFFLOADING.md  OFFLOAD_MANAGEMENT.md  REDUCTION.md
loom-py/examples/: context_engineering_demo.py  loom.toml.example  market_analyst_async.py  trio.py
loom-py/src/loom/: __init__.py  agent.py  capability.py  cli.py  client.py  cognitive.py  config.py  context.py  embedded.py  envelope.py  llm.py  memory.py  orchestrator.py  tool.py  tracing.py
loom-py/src/loom/agent/: README.md  __init__.py  base.py  context.py  envelope.py  event.py
loom-py/src/loom/bridge/: README.md  __init__.py
loom-py/src/loom/cli/: README.md  __init__.py  chat.py  main.py
loom-py/tests/: README.md  conftest.py  demo_single_agent.py  test_capability.py  test_cognitive.py  test_config.py  test_context.py  test_embedded.py  test_envelope.py  test_integration.py  test_llm_provider.py  test_mcp_env_parsing.py  test_mcp_loading.py  test_memory.py  test_native_tools.py  test_orchestrator.py  test_tool_call_chain.py
loom-py/tests/e2e/: __init__.py
loom-py/tests/integration/: __init__.py  bridge_server.py  test_context_engineering.py  test_mcp_loading.py
loom-py/tests/unit/: __init__.py  test_cognitive.py  test_compactor.py  test_config.py  test_context.py  test_envelope.py  test_offloader.py  test_step.py  test_tool.py  test_tool_descriptor.py
(+168 files in other folders)
