[package]
name = "loom-core"
version = "0.1.0"
edition = "2021"
authors = ["Loom Team"]
description = "Loom - Event-driven AI Operating System - Core Runtime"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"
rocksdb = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5.5"
crossbeam = "0.8"
chrono = "0.4"
cpal = { version = "0.15", optional = true }
webrtc-vad = { version = "0.4", optional = true }

[features]
default = []
# Enable microphone capture via cpal (requires system audio dev packages, e.g., ALSA on Linux)
mic = ["dep:cpal"]
vad = ["dep:webrtc-vad"]
stt = []

[build-dependencies]
tonic-build = "0.10"
protoc-bin-vendored = "3"

[dev-dependencies]
mockall = "0.12"
criterion = "0.5"

# [[bench]]
# name = "event_bus_benchmark"
# harness = false
# Note: Benchmark file not yet created. Uncomment when benches/event_bus_benchmark.rs is added.

[lib]
name = "loom_core"
path = "src/lib.rs"

# Examples with feature requirements
[[example]]
name = "mic_capture"
required-features = ["mic"]

[[example]]
name = "mic_vad"
required-features = ["mic", "vad"]

[[example]]
name = "mic_vad_stt"
required-features = ["mic", "vad", "stt"]
