[package]
name = "loom-core"
version = "0.1.0"
edition = "2021"
authors = ["Loom Team"]
description = "Loom - Event-driven AI Operating System - Core Runtime"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
loom-proto = { path = "../loom-proto" }
rocksdb = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5.5"
crossbeam = "0.8"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
default = []

[build-dependencies]

[dev-dependencies]
mockall = "0.12"
criterion = "0.5"
serial_test = "3.0"

[[bench]]
name = "event_bus_benchmark"
harness = false

[lib]
name = "loom_core"
path = "src/lib.rs"

# Audio examples have moved to the loom-audio crate.
