[package]
name = "loom-core"
version = "0.1.0"
edition = "2021"
authors = ["Loom Team"]
description = "Loom - Event-driven AI Operating System - Core Runtime"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
loom-proto = { path = "../loom-proto" }
rocksdb = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5.5"
crossbeam = "0.8"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Dashboard dependencies
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
include_dir = "0.7"
mime_guess = "2.0"

# OpenTelemetry dependencies
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "trace", "metrics"] }
tracing-opentelemetry = "0.23"
opentelemetry-semantic-conventions = "0.14"

[features]
default = []

[build-dependencies]

[dev-dependencies]
mockall = "0.12"
criterion = "0.5"
serial_test = "3.0"
toml = "0.8"

[[bench]]
name = "event_bus_benchmark"
harness = false

[lib]
name = "loom_core"
path = "src/lib.rs"

# Audio examples have moved to the loom-audio crate.
