[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "loom"
version = "0.1.0a1"
description = "Loom Python SDK: build event-driven multi-agent systems and connect to Loom Core via gRPC"
readme = "README.md"
authors = [
  { name = "Loom OS", email = "maintainers@loom-os.dev" },
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["agents", "grpc", "event-bus", "multi-agent", "loom"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",
  "Framework :: AsyncIO",
]
dependencies = [
  "grpcio>=1.62.0",
  "protobuf>=4.25.0",
  "pydantic>=2.6.0",
  "jsonschema>=4.21.0",
  "platformdirs>=4.2.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "aiohttp>=3.9.0",
  "psutil>=5.9.0",
  "opentelemetry-api>=1.22.0",
  "opentelemetry-sdk>=1.22.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.22.0",
]

[project.urls]
Homepage = "https://github.com/loom-os/loom"
Documentation = "https://github.com/loom-os/loom/tree/main/docs"
Issues = "https://github.com/loom-os/loom/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.hatch.build]
include = [
  "src/loom/**",
  "README.md",
  "LICENSE",
]

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.default.scripts]
proto = "python -m loom.proto.generate"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.8",
  "grpcio-tools>=1.62.0",
]
llm = [
  "httpx>=0.27.0",
]

[project.scripts]
loom = "loom.cli:main"

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--asyncio-mode=auto",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require bridge server",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/loom"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/proto/generated/*",
    "*/proto/generate.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | proto/generated
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "proto/generated",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["ARG001"]    # unused function arguments in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "proto/generated/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "google.protobuf.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "proto/generated"]
skips = ["B101"]  # assert_used - we use assertions in tests
